--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "calc-app",
   "version": "0.1.0",
+  "homepage": "https://escaper-ilya.github.io/sizing/",
   "private": true,
   "dependencies": {
     "@rsuite/icons": "^1.0.3",
@@ -16,6 +17,8 @@
     "xlsx": "^0.18.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "set PORT=3006 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
